--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://leon-12138.github.io/myweb",
+  "homepage": "https://liangcai.me/",
   "name": "myweb",
   "version": "0.1.0",
   "private": true,
