--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-lightbox": "^5.1.4",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
